# mlops

./: .gitignore  README.md  pyproject.toml
notebooks/: twitter_emotion_detection.ipynb
src/exp_tracking/: pipeline.py
src/exp_version_control/: config.py  data_ingestion.py  data_preprocessing.py  dvc.yaml  feature_engineering.py  metrics.json  model.pkl  model_building.py  model_evaluation.py
