[project]
name = "src"
version = "0.1.0"
description = "MLOPS"
authors = [
    {name = "Daniel Adeboye",email = "oluwadaunsid@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc (>=3.61.0,<4.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "mlflow (<3)",
    "dagshub (>=0.6.3,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
